<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:a="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tl="http://schemas.android.com/tools"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:orientation="vertical"
    tl:context="com.blogspot.programer27android.copasqenedrive.EditData">
    <ProgressBar
        a:visibility="gone"
        a:id="@+id/pbE"
        a:layout_width="match_parent"
        a:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginLeft="30dp"
        a:layout_marginRight="30dp"
        a:layout_marginTop="10dp"
        a:textColorHint="@color/black"
        a:background="@drawable/bginput">
        <android.support.design.widget.TextInputEditText
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:layout_gravity="center"
            a:hint="@string/id"
            a:id="@+id/edtnamaE"
            a:inputType="textEmailAddress"
            a:layout_marginLeft="30dp"
            a:layout_marginRight="30dp"
            a:textColorHint="@color/black">
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginLeft="30dp"
        a:layout_marginRight="30dp"
        a:layout_marginTop="10dp"
        a:textColorHint="@color/black"
        a:background="@drawable/bginput">
        <android.support.design.widget.TextInputEditText
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:layout_gravity="center"
            a:id="@+id/edtemailE"
            a:inputType="textEmailAddress"
            a:layout_marginLeft="30dp"
            a:layout_marginRight="30dp"
            a:textColorHint="@color/black"
            a:hint="@string/email">
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginLeft="30dp"
        a:layout_marginRight="30dp"
        a:layout_marginTop="10dp"
        a:textColorHint="@color/black"
        a:background="@drawable/bginput">
        <android.support.design.widget.TextInputEditText
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:layout_gravity="center"
            a:id="@+id/edtpasswordE"
            a:inputType="textPassword"
            a:layout_marginLeft="30dp"
            a:layout_marginRight="30dp"
            a:textColorHint="@color/black"
            a:hint="@string/password">
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginTop="32dp"
        a:orientation="horizontal">
        <Button
            a:id="@+id/btnupdateE"
            a:layout_width="match_parent"
            a:background="@drawable/btn"
            a:layout_height="wrap_content"
            a:layout_marginRight="10dp"
            a:layout_marginLeft="10dp"
            a:textAllCaps="false"
            a:layout_weight="1"
            a:text="Update" />
        <Button
            a:id="@+id/btndeleteE"
            a:layout_width="match_parent"
            a:background="@drawable/btn"
            a:layout_height="wrap_content"
            a:layout_marginRight="10dp"
            a:layout_marginLeft="10dp"
            a:textAllCaps="false"
            a:layout_weight="1"
            a:text="Delete" />

    </LinearLayout>
</LinearLayout>
